--- a/app/src/main/res/layout/activity_edit_thu_chi.xml
+++ b/app/src/main/res/layout/activity_edit_thu_chi.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorbackground"
+    android:background="@color/colorbackgroundActionbar"
     android:orientation="vertical"
     tools:context=".MinhLayout.EditThuChiActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
@@ -56,13 +56,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundlayoutdau"
                 android:orientation="vertical">
 
@@ -82,8 +81,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:orientation="horizontal"
-                    android:onClick="xuLyChonNhom">
+                    android:onClick="xuLyChonNhom"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imgChonNhom"
@@ -97,8 +96,6 @@
                         app:srcCompat="@drawable/question2" />
 
                     <EditText
-                        android:focusable="false"
-                        android:onClick="xuLyChonNhom"
                         android:id="@+id/edtChonNhom"
                         android:layout_width="265dp"
                         android:layout_height="wrap_content"
@@ -106,8 +103,10 @@
                         android:layout_marginLeft="0dp"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:focusable="false"
                         android:hint="Chọn nhóm"
                         android:inputType="textPersonName"
+                        android:onClick="xuLyChonNhom"
                         android:textSize="18sp" />
                 </LinearLayout>
 
@@ -143,8 +142,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:orientation="horizontal"
-                    android:onClick="xuLyHienThiNgay">
+                    android:onClick="xuLyHienThiNgay"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView3"
@@ -157,24 +156,24 @@
                         app:srcCompat="@drawable/calendar_picture" />
 
                     <EditText
-                        android:onClick="xuLyHienThiNgay"
-                        android:focusable="false"
                         android:id="@+id/edtChonNgay"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:focusable="false"
                         android:hint="Chọn ngày"
                         android:inputType="textPersonName"
+                        android:onClick="xuLyHienThiNgay"
                         android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:onClick="xuLyChonPhuongThucEdit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
+                    android:onClick="xuLyChonPhuongThucEdit"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -206,7 +205,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundlayoutthuhai"
                 android:orientation="horizontal">
 
@@ -236,7 +235,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundchonsukien"
                 android:orientation="vertical">
 
@@ -304,7 +303,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:background="@color/colorbackground"
                 android:orientation="horizontal">
