--- a/app/src/main/res/layout/minh_activity_thuchi.xml
+++ b/app/src/main/res/layout/minh_activity_thuchi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorbackground"
+    android:background="@color/colorbackgroundActionbar"
     android:orientation="vertical"
     tools:context=".MinhLayout.ThuChiActivity">
 
@@ -29,7 +29,7 @@
         <TextView
             android:id="@+id/txtThemGiaoDich"
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Thêm giao dịch"
@@ -56,13 +56,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundlayoutdau"
                 android:orientation="vertical">
 
@@ -83,8 +82,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:orientation="horizontal"
-                    android:onClick="xuLyChonNhom">
+                    android:onClick="xuLyChonNhom"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imgChonNhom"
@@ -144,8 +143,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:orientation="horizontal"
-                    android:onClick="xuLyHienThiNgay">
+                    android:onClick="xuLyHienThiNgay"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView3"
@@ -158,15 +157,15 @@
                         app:srcCompat="@drawable/calendar_picture" />
 
                     <EditText
-                        android:onClick="xuLyHienThiNgay"
-                        android:focusable="false"
                         android:id="@+id/edtChonNgay"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:focusable="false"
                         android:hint="Chọn ngày"
                         android:inputType="textPersonName"
+                        android:onClick="xuLyHienThiNgay"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -175,8 +174,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:orientation="horizontal"
-                    android:onClick="xuLyChonPhuongThuc">
+                    android:onClick="xuLyChonPhuongThuc"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imgPhuongThucTT"
@@ -190,15 +189,15 @@
                         app:srcCompat="@drawable/wallet_picture" />
 
                     <EditText
-                        android:onClick="xuLyChonPhuongThuc"
                         android:id="@+id/edtPhuongThucTT"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Chọn phương thức thanh toán"
                         android:focusable="false"
+                        android:hint="Chọn phương thức thanh toán"
                         android:inputType="textPersonName"
+                        android:onClick="xuLyChonPhuongThuc"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -208,7 +207,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundlayoutthuhai"
                 android:orientation="horizontal">
 
@@ -238,7 +237,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorbackgroundchonsukien"
                 android:orientation="vertical">
 
@@ -306,7 +305,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:background="@color/colorbackground"
                 android:orientation="horizontal">
