--- a/app/src/main/res/layout/hoang_add_economy.xml
+++ b/app/src/main/res/layout/hoang_add_economy.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarSaveTietKiem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/textLoginColor"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme">
+
+        </android.support.v7.widget.Toolbar>
         <LinearLayout
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
@@ -23,38 +31,48 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/wallet" />
+                app:srcCompat="@drawable/wallet"
+                android:layout_gravity="center"/>
 
             <EditText
                 android:id="@+id/edtMucDichTietKiem"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:hint=" Mục đích tiết kiệm                        "
+                android:hint=" Mục đích tiết kiệm"
                 android:inputType="text|textAutoCorrect|textCapWords"
                 android:lines="1"
                 android:maxLines="1" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"/>
+
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="20dp">
+
             <ImageView
-                android:layout_width="27dp"
-                android:layout_height="27dp"
                 android:id="@+id/imageView"
-                android:layout_weight="1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="25dp"
-                app:srcCompat="@drawable/money" />
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/money_future" />
 
             <EditText
                 android:id="@+id/edtMucTieuTietKiem"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:hint="  Nhập số tiền muốn tiết kiệm       "
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:hint="Nhập số tiền muốn tiết kiệm"
                 android:inputType="numberDecimal"
                 android:lines="1"
                 android:maxLines="1" />
@@ -65,19 +83,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
+
             <ImageView
-                android:layout_width="27dp"
-                android:layout_height="27dp"
                 android:id="@+id/imageView2"
-                android:layout_weight="1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="25dp"
-                app:srcCompat="@drawable/money" />
+                app:srcCompat="@drawable/money_here" />
 
             <EditText
                 android:id="@+id/edtTienHienTai"
-                android:layout_width="match_parent"
+                android:layout_width="352dp"
                 android:layout_height="40dp"
-                android:hint="  Nhập số tiền đang có                   "
+                android:layout_marginLeft="10dp"
+                android:hint="Nhập số tiền đang có                   "
                 android:inputType="numberDecimal"
                 android:lines="1"
                 android:maxLines="1" />
@@ -88,21 +107,31 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
+
             <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:id="@+id/imageView3"
-                android:layout_weight="1"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/calendar" />
+                android:layout_weight="1"
+                app:srcCompat="@drawable/calendar"
+                android:layout_gravity="center"/>
             <TextView
                 android:id="@+id/tvNgayThangNam"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:lines="1"
                 android:maxLines="1"
-                android:text="Chọn ngày kết thúc"/>
+                android:layout_marginLeft="10dp"
+                android:text="Chọn ngày kết thúc"
+                android:layout_gravity="center"
+                android:gravity="center"/>
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -115,23 +144,15 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/swt"
                 android:textSize="23sp"
-                android:text="Thông báo"/>
+                android:text="Thông báo     "
+                android:layout_marginBottom="20dp"/>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <Button
-                android:id="@+id/btnLuuTietKiem"
-                android:layout_width="127dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="200dp"
-                android:text="Lưu" />
-
-        </LinearLayout>
+            android:background="@android:color/darker_gray"/>
 
     </LinearLayout>
 
