--- a/app/src/main/res/layout/activity_retrieve_password.xml
+++ b/app/src/main/res/layout/activity_retrieve_password.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_simple2"
-    tools:context=".Authentication.ForgetPasswordActivity">
+    tools:context=".Authentication.RetrievePasswordActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,18 +36,19 @@
             android:textColor="@color/textLoginColor" />
 
         <EditText
-            android:id="@+id/edtEmailFP"
+            android:id="@+id/edtEmailRP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/textLoginColor"
-            android:drawableLeft="@drawable/ic_email_white_24dp"
+            android:drawableStart="@drawable/ic_email_white_24dp"
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/textLoginColor"
-            android:textColorHint="@color/textLoginColor" />
+            android:textColorHint="@color/textLoginColor"
+            tools:ignore="Autofill" />
 
         <Button
             android:id="@+id/btnResetPassword"
@@ -57,7 +57,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@drawable/radius_button"
-            android:drawableTint="@color/transparentBackgroundLogin"
             android:text="@string/request_NewPassword"
             android:textColor="@color/textLoginColor" />
 
@@ -77,7 +76,7 @@
                 android:textColor="@color/textLoginColor" />
 
             <TextView
-                android:id="@+id/txtSignUpFP"
+                android:id="@+id/txtSignUpRP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
